added interface for the MapUtility
added interface for the MapUtility and changed the name of the class from MapHelper to MapUtility .

--- a/Views/MapPin/EditMapPage.xaml
+++ b/Views/MapPin/EditMapPage.xaml
@@ -35,7 +35,7 @@
             Text="Show Track"
             FontSize="12" 
             Padding="5,0,5,10"        
-            Command="{Binding ShowTrackCommand}" />
+            Command="{Binding addPointsToTrackCommand}" />
 
 
 
